--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 {% block non_field_errors %}
     {% for error in form.non_field_errors().as_data() %}
         {% for message in error %}
-            <p class="alert alert-danger">{{ message }}
+            <p class="center alert alert-danger">{{ message }}
                 {% if error.code == 'unverified' %}
                     <a href="{{ url_for('mhacks-verification-email', kwargs={'user_pk': error.user_pk}) }}">Click to resend</a>.
                 {% endif %}
