--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -44,8 +44,9 @@ p {
     border-radius: 0px;
     background-color: #fff;
     max-width: 100%;
-    overflow: ellipsis;
-    min-width: 270px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .select_style select
@@ -59,9 +60,9 @@ p {
     outline:1px black;
     cursor:pointer;
     padding:7px 10px;
-    max-width: 100%; 
     text-overflow: ellipsis;
-    min-width: 270px
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .addMargin{
