--- a/templates/apply.html
+++ b/templates/apply.html
@@ -60,11 +60,11 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-2 "> 
-                    <input id="month" name="grad_month" placeholder="MM" type="number" min="01" max="12" maxlength="2" class="form-control input-md" required="" value=""> 
-                </div> 
+                <div class="col-lg-2 ">
+                    <input id="month" name="grad_month" placeholder="MM" type="number" min="01" max="12" maxlength="2" class="form-control input-md" required="" value="">
+                </div>
                 <div class="col-lg-4">
-                 <input id="year" name="grad_year" placeholder="YYYY" type="number" min="2015" max="2020" maxlength="4" class="form-control input-md" required="" value=""> 
+                 <input id="year" name="grad_year" placeholder="YYYY" type="number" min="2015" max="2020" maxlength="4" class="form-control input-md" required="" value="">
              </div>
          </div>
          <div class="row two">
@@ -253,22 +253,22 @@
         <div class="row three">
             <div class="col-lg-12">
                 <label class="application-text" for="proudof">What’s something that you made that you’re proud of (it doesn’t have to be a hack)? (150 words max)</label>
-                <input type="text" required="" name="anythingelse" class="form-control input-lg" id="anythingelse"></input>
+                <input type="text" required="" name="anythingelse" class="form-control input-lg" id="anythingelse">
             </div>
         </div>
         <div class="row three">
             <div class="col-lg-12 ">
                 <label class="application-text" for="whatbuild">What would you build if you had access to all the resources you needed? (150 words max)</label>
-                <input type="text" required="" name="whatbuild" class="form-control input-lg" id="whatbuild"></input>
+                <input type="text" required="" name="whatbuild" class="form-control input-lg" id="whatbuild">
             </div>
         </div>
         <div class="row three">
             <div class="col-lg-12">
                 <label class="application-text" for="anythingelse">Anything else you want to tell us? (150 words max)</label>
-                <input type="text" required="" name="anythingelse" class="form-control input-lg" id="anythingelse"></input>
+                <input type="text" required="" name="anythingelse" class="form-control input-lg" id="anythingelse">
             </div>
         </div>
-    </div>   
+    </div>
     <div id="shortanswer">
         <div class="row">
             <div class="col-lg-12 text-center title-apply">
@@ -277,7 +277,7 @@
         </div>
         <div class ="row">
             <div class="col-lg-12 ">
-                <label class="checkbox-inline checkbox-style" ><input type="checkbox" name="reimbursment-check" id="reimbursment-check" value="no"></input>
+                <label class="checkbox-inline checkbox-style" ><input type="checkbox" name="reimbursment-check" id="reimbursment-check" value="no">
                     I would need a travel reimbursement in order to attend this event.  </label>
                 </div>
             </div>
