--- a/templates/index.html
+++ b/templates/index.html
@@ -18,13 +18,13 @@
             </div>
             <div id="headerButtons">
                 <a href="mailto:hackathon@umich.edu">Email</a>
-                <p>Applications coming soon!</p>
+                <a href="{{ url_for('mhacks-apply') }}">Apply</a>
             </div>
             <div id="headerDropdown">
                 <i id="dropdownTrigger" class="fa fa-bars fa-2x" aria-hidden="false"></i>
                 <div id="dropdownContent" class="turquoise">
                     <a href="mailto:hackathon@umich.edu">Email</a>
-                    <p>Applications coming soon!</p>
+                    <a href="{{ url_for('mhacks-apply') }}">Apply</a>
                 </div>
             </div>
         </div>
