--- a/templates/generic_form.html
+++ b/templates/generic_form.html
@@ -82,7 +82,16 @@
                                 </div>
                             </div>
                             <div class="row ">
+                        {% endif %}
 
+                        {% if field.field.travel %}
+                            </div>
+                            <div class="row three">
+                                <div class="col-lg-12 text-center title-apply ">
+                                    <div class="application-title ">Travel</div>
+                                </div>
+                            </div>
+                            <div class="row ">
                         {% endif %}
 
                         {% endfor %}
