--- a/templates/application.html
+++ b/templates/application.html
@@ -45,13 +45,18 @@
 			$('input[type="checkbox"][id="id_is_international"]').change(function() {
 			     if(this.checked) {
 			     	$("#id_is_high_school").parent().hide();
-			     	$("#graduation_date").parent().hide();
-			     	$("#major-autocomplete").parent().hide();
 			 	 }
 			 	 else{			   
 			 	    $("#id_is_high_school").parent().show();  	
-			 	 	$("#graduation_date").parent().show();
-			     	$("#major-autocomplete").parent().show();
+			 	 }
+			 });
+
+			$('input[type="checkbox"][id="id_needs_reimbursement"]').change(function() {
+			     if(this.checked) {
+			     	$("#id_can_pay").parent().hide();
+			 	 }
+			 	 else{			   
+			 		 $("#id_can_pay").parent().show();
 			 	 }
 			 });
 		});
