--- a/templates/application.html
+++ b/templates/application.html
@@ -31,12 +31,10 @@
 		$(document).ready(function() {
 			$('input[type="checkbox"][id="id_is_high_school"]').change(function() {
 			     if(this.checked) {
-			     	$("#id_is_international").parent().hide();
 			     	$("#graduation_date").parent().hide();
 			     	$("#major-autocomplete").parent().hide();
 			 	 }
 			 	 else{			     	
-			 	 	$("#id_is_international").parent().show();
 			 	 	$("#graduation_date").parent().show();
 			     	$("#major-autocomplete").parent().show();
 			 	 }
@@ -44,10 +42,10 @@
 
 			$('input[type="checkbox"][id="id_needs_reimbursement"]').change(function() {
 			     if(this.checked) {
-			     	$("#id_can_pay").parent().hide();
+			     	$("#id_can_pay").parent().show();
 			 	 }
 			 	 else{			   
-			 		 $("#id_can_pay").parent().show();
+			 		 $("#id_can_pay").parent().hide();
 			 	 }
 			 });
 		});
@@ -57,7 +55,7 @@
 {% endblock %}
 
 {% block submit_row %}
-    <button value="save" data-toggle="tooltip" name="_save" id="save" class="four columns offset-by-four">{% block save_title %}Save{% endblock %}</button>
+{#    <button value="save" data-toggle="tooltip" name="_save" id="save" class="four columns offset-by-four">{% block save_title %}Save{% endblock %}</button>#}
     {{ super() }}
 {% endblock %}
 
