Actually *this* is the commit that fixes header buttons not showing up

--- a/templates/basic_page.html
+++ b/templates/basic_page.html
@@ -21,3 +21,7 @@
     </div>
 
 {% endblock %}
+
+{% block scripts %}
+    <script src="{{ static('javascript/header.js') }}" type="application/javascript"></script>
+{% endblock %}
