--- a/templates/index.html
+++ b/templates/index.html
@@ -18,14 +18,12 @@
             </div>
             <div id="headerButtons">
                 <a href="mailto:hackathon@umich.edu">Email</a>
-                <a href="{{ url_for('mhacks-applyMentor') }}">Mentor</a>
                 <a href="{{ url_for('mhacks-apply') }}">Apply</a>
             </div>
             <div id="headerDropdown">
                 <i id="dropdownTrigger" class="fa fa-bars fa-2x" aria-hidden="false"></i>
                 <div id="dropdownContent" class="turquoise">
                     <a href="mailto:hackathon@umich.edu">Email</a>
-                    <a href="{{ url_for('mhacks-applyMentor') }}">Mentor</a>
                     <a href="{{ url_for('mhacks-apply') }}">Apply</a>
                 </div>
             </div>
@@ -554,7 +552,7 @@
 {% block scripts %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
             type="application/javascript"></script>
-    <script src="http://mfzy.co/packery.pkgd.js" type="application/javascript"></script>
+    <script src="{{ static('javascript/packery.pkgd.min.js') }}" type="application/javascript"></script>
 
     <script src="{{ static('javascript/main.js') }}" type="application/javascript"></script>
 {% endblock %}
