--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -16,7 +16,7 @@ body {
 
 h1 {
     font-family: 'Ubuntu';
-    font-size: 18pt;
+    font-size: 16pt;
     font-weight: bold;
     color: #0093B1;
     padding: 0;
@@ -44,7 +44,7 @@ h3 {
 
 h4 {
     font-family: 'Ubuntu';
-    font-size: 12pt;
+    font-size: 14pt;
     text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.3);
     letter-spacing: 0.4px;
     color: rgba(37, 37, 37, 0.63);
@@ -62,23 +62,23 @@ p {
 /* --- Utility Classes --- */
 
 .turquoise {
-    background: rgba(0, 169, 194, 1);
+    background: rgba(0, 169, 194, 0.7);
 }
 
 .blue {
-    background: rgba(0, 99, 176, 1);
+    background: rgba(0, 99, 176, 0.7);
 }
 
 .lightTurquoise {
-    background: rgba(97, 192, 212, 1);
+    background: rgba(97, 192, 212, 0.7);
 }
 
 .darkBlue {
-    background: rgba(15, 59, 127, 1);
+    background: rgba(15, 59, 127, 0.7);
 }
 
 .lightBlue {
-    background: rgba(64, 161, 218, 1);
+    background: rgba(64, 161, 218, 0.7);
 }
 
 .yellow {
@@ -180,6 +180,7 @@ p {
     padding: 5px 10px;
     width: 90px;
     margin: 2px 0 2px 10px;
+    border-radius: 5px;
 
     text-decoration: none;
     color: white;
@@ -355,7 +356,7 @@ p {
 
 .faq-item .question:hover {
     cursor: pointer;
-    color: #FFE641;
+    color: rgba(15, 59, 127, 1);
 }
 
 .faq-item .question:before {
@@ -469,7 +470,7 @@ p {
 .grid-item-content {
     width: 160px;
     height: 120px;
-    padding: 20px;
+    padding: 15px;
     visibility: visible;
     transition: all 0.2s;
     border: 1px solid rgba(20, 20, 20, 0.1);
@@ -572,7 +573,7 @@ p {
     font-weight: bold;
     color: #0093B1;
     padding: 0;
-    margin: 25px 4%;
+    margin: 18px 4%;
     transition: all 0.2s;
 }
 
@@ -648,8 +649,8 @@ p {
 
 .tile-image {
     margin: 0;
-    max-height: 90%;
-    max-width: 90%;
+    max-height: 70%;
+    max-width: 70%;
     opacity: 0.6;
 }
 
@@ -779,6 +780,20 @@ li.answer {
     .grid-item-expand.expand-medium, .grid-item-expand.expand-medium .grid-item-content,
     .grid-item-expand.expand-small, .grid-item-expand.expand-small .grid-item-content {
         max-width: 100%;
+    }
+
+    .grid-item .grid-item-content .basic-info {
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+    }
+
+    .grid-item .grid-item-content .basic-info h1 {
+        font-size: 24pt;
+        transition: all 0.2s;
     }
 
     #headerButtons {
