--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,10 @@
                 <p>Detroit Masonic Temple</p>
             </div>
             <div id="logo">
-                <img id="logoM" src="{{ static('assets/logo-m.png') }}" alt="MHacks 8 Logo - M">
-                <img id="logoText" src="{{ static('assets/logo-text.png') }}" alt="MHacks 8 Logo - Hacks 8">
+                <a href="{{ url_for('mhacks-home') }}">
+                    <img id="logoM" src="{{ static('assets/logo-m.png') }}" alt="MHacks 8 Logo - M">
+                    <img id="logoText" src="{{ static('assets/logo-text.png') }}" alt="MHacks 8 Logo - Hacks 8">
+                </a>
             </div>
             <div id="headerButtons">
                 <a href="mailto:hackathon@umich.edu">Email</a>
