--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -8,8 +8,10 @@
     <p> Already know your password? <br> Click <a href="{{ url_for('mhacks-login') }}">here</a> to login!</p>
 {% endblock %}
 
-{% block message_title %}Reset Password Link Sent{% endblock %}
-{% block message_info %}
-    <h4>We sent you an email with a link to reset your password.</h4>
-    <p>Didn't get it? Check your spam or <a href="{{ url_for('mhacks-reset_password') }}">click here to request another one</a></p>
+{% block basic_page_content %}
+    <br>
+    {% block message_info %}
+        <h4 style="text-align: center">We sent you an email with a link to reset your password.</h4>
+        <p style="text-align: center">Didn't get it? Check your spam or <a href="{{ url_for('mhacks-reset_password') }}">click here to request another one</a></p>
+    {% endblock %}
 {% endblock %}
