--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -663,8 +663,8 @@ p {
 }
 
 #mlh-logo {
-    max-height: 100px;
-    margin-top: 10px;
+    max-height: 80px;
+    max-width:100%;
 }
 
 /* --- FAQ Tile Content --- */
@@ -687,15 +687,41 @@ li.answer {
 }
 
 .footer-bar {
-    height: 40px;
+    height: 180px;
     width: 100%;
     background-color: #0093B1;
-    padding-right: 60px;
+    padding-bottom: 20px;
     color: white;
+    font-family:'Ubuntu';
     font-size: 10pt;
+    text-align:center;
     display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+#footer-left {
+    position: absolute;
+    bottom: 30px;
+    left: 40px;
+    height: 150px;
+}
+
+#footer-right {
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
+    right: 40px;
+    max-width: 33%;
+    height: 160px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#footer-right p {
+    width: 100%;
+    margin: 0 auto 10px;
 }
 
 /* --- @media Queries --- */
