--- a/templates/index.html
+++ b/templates/index.html
@@ -20,12 +20,14 @@
             </div>
             <div id="headerButtons">
                 <a href="mailto:hackathon@umich.edu">Email</a>
+                <p style="font-size: 11pt; margin: 2px 0 2px 10px">Mentor Form coming soon!</p>
                 <a href="{{ url_for('mhacks-apply') }}">Apply</a>
             </div>
             <div id="headerDropdown">
                 <i id="dropdownTrigger" class="fa fa-bars fa-2x" aria-hidden="false"></i>
                 <div id="dropdownContent" class="turquoise">
                     <a href="mailto:hackathon@umich.edu">Email</a>
+                    <p style="font-size: 11pt; margin: 2px 0">Mentor Form coming soon!</p>
                     <a href="{{ url_for('mhacks-apply') }}">Apply</a>
                 </div>
             </div>
@@ -536,17 +538,24 @@
             </div>
 
             <div class="flex-row">
-                <div class="text-center">
-                    <h4>In Partnership With</h4>
-                    <a href="https://mlh.io/" target="_blank">
-                        <img id="mlh-logo" src="{{ static('assets/mlh.png') }}" alt="Major League Hacking">
-                    </a>
-                </div>
+
             </div>
         </div>
 
         <div class="footer-bar">
+            <a id="footer-left"
+               href="https://mlh.io/seasons/na-2017/events?utm_source=na-2017&utm_medium=TrustBadge&utm_campaign=na-2017&utm_content=white"
+               target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2017/white.svg"
+                                    alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
+
             &copy; MHacks 2016
+
+            <div id="footer-right">
+                <p>In Partnership With</p>
+                <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">
+                    <img id="mlh-logo" src="{{ static('assets/mlh.png') }}" alt="Major League Hacking">
+                </a>
+            </div>
         </div>
     </div>
 {% endblock %}
