--- a/templates/thanks_registering.html
+++ b/templates/thanks_registering.html
@@ -5,6 +5,6 @@
 
 {% block basic_page_content %}
     <p class="center">
-        Thanks for registering! We just sent you an email to confirm your address. Once you click the link you'll be able to <a href="{{ url_for('mhacks-login') }}">login</a> and <a href="{{ url_for('mhacks-apply') }}">apply</a> 🙂
+        Thanks for registering! We just sent you an email to confirm your address. Once you click the link you'll be able to <a href="{{ url_for('mhacks-login') }}">login</a> and <a href="{{ url_for('mhacks-apply') }}">apply</a> ☺
     </p>
 {% endblock %}
