--- a/templates/application_search.html
+++ b/templates/application_search.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" media="all" href="{{ static('stylesheets/application.css') }}">
 {% endblock %}
 
+{% block form_action %}{{url_for('mhacks-applicationReview')}}{% endblock %}
+
 {% block form_enctype %}enctype="multipart/form-data"{% endblock %}
 
 {% block form_title %}Application Search{% endblock %}
