--- a/templates/application_search_form.html
+++ b/templates/application_search_form.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     {% if form %}
-        <form class="form-horizontal" method="POST" autocomplete="on" action="{% block form_action %}{% endblock %}" {% block form_enctype %}{% endblock %}>
+        <form class="form-horizontal" method="GET" autocomplete="on" action="{% block form_action %}{% endblock %}" {% block form_enctype %}{% endblock %}>
             {{ csrf_input }}
             <fieldset>
                 {% include 'header.html' %}
