--- a/static/stylesheets/application_view.css
+++ b/static/stylesheets/application_view.css
@@ -42,7 +42,19 @@ h2 {
     margin-top: 30px;
 }
 
-html button {
+thead > tr > th{
+    text-align: center;
+}
+
+input[type=text]{
+    margin-bottom: 10px;
+}
+
+form{
+    text-align: center;
+}
+
+html button, input[type=submit] {
     background: rgba(0, 169, 194, 1);
     box-shadow: 0 3px 6px rgba(0,0,0,0.23), 0 3px 6px rgba(0,0,0,0.15);
     border-radius: 5px;
@@ -58,7 +70,22 @@ html button {
 }
 
 table {
-    border-collapse: collapse;
+}
+
+table > thead tr:first-child th:first-child {
+    border-radius: 0.6em 0 0 0;
+}
+
+table > thead tr:first-child th:last-child {
+    border-radius: 0 0.6em 0 0;
+}
+
+table > tbody tr:last-child td:first-child {
+    border-radius: 0 0 0 0.6em;
+}
+
+tbody > tr:last-child td:last-child {
+    border-radius: 0 0 0.6em 0;
 }
 
 table, th, td {
