capitalized update button

--- a/templates/application_review.html
+++ b/templates/application_review.html
@@ -53,7 +53,7 @@
                                 {{ csrf_input }}
                                 <input type="hidden" name="id" value="{{result.id}}">
                                 <input type="text" name="score" value="{{result.score}}">
-                                <input type="submit" value="update">
+                                <input type="submit" value="Update">
                             </form>
 
                         </td>
