--- a/templates/application_view.html
+++ b/templates/application_view.html
@@ -11,9 +11,12 @@
         {% include 'header.html' %}
         {% if results %}
         <h2>There are {{ results | length }} Matches found. Click <a href="{{url_for('mhacks-applicationSearch')}}">here</a> to run another search</h2>
-        <div >
-            <table class="table table-striped" style="color:black;overflow-x:scroll;">
-            <thead>
+
+            <form method="POST" action="{{ url_for('mhacks-sendscore')}}">
+                {{ csrf_input }}
+                <input type="submit" value="update">
+                <table class="table table-striped" style="color:black;overflow-x:scroll;">
+                    <thead>
                 <tr>
                     <th>score</th>
                     <th>name</th>
@@ -45,16 +48,15 @@
                 </tr>
 
             </thead>
-            <tbody>
+                        <tbody>
                 {% for result in results %}
                     <tr>
                         <td class="col-md-1">
-                            <form method="POST" action="{{ url_for('mhacks-sendscore')}}">
-                                {{ csrf_input }}
-                                <input type="hidden" name="id" value="{{result.id}}">
-                                <input type="text" name="score" value="{{result.score}}">
-                                <input type="submit" value="update">
-                            </form>
+
+
+                            <input type="hidden" name="id[]" value="{{result.id}}">
+                            <input type="text" name="score[]" value="{{result.score}}">
+
 
                         </td>
 
@@ -70,10 +72,10 @@
                         <td>{{result.birthday}}</td>
                         <td>{{result.gender}}</td>
                         <td>{{result.race}}</td>
-                        <td>{{result.github}}</td>
-                        <td>{{result.devpost}}</td>
-                        <td>{{result.personal_website}}</td>
-                        <td>{{result.resume}}</td>
+                        <td><a href="{{result.github}}">{{result.github}}</a></td>
+                        <td><a href="{{result.devpost}}">{{result.devpost}}</a></td>
+                        <td><a href="{{result.personal_website}}">{{result.personal_website}}</a></td>
+                        <td><a href="{{result.resume}}">{{result.resume}}</a></td>
                         <td>{{result.num_hackathons}}</td>
                         <td>{{result.cortex}}</td>
                         <td>{{result.passionate}}</td>
@@ -88,8 +90,8 @@
                     </tr>
                 {% endfor %}
             </tbody>
-        </table>
-        </div>
+                </table>
+            </form>
 
         {% for result in results %}
 
