added fixed header styling for application review result; only filter application which are submitted

--- a/static/stylesheets/application_view.css
+++ b/static/stylesheets/application_view.css
@@ -30,21 +30,35 @@ p {
     position: static;
 }
 
-.title-form h3 {
+h2{
     color: rgba(0, 169, 194, 1);
-    font-size: 35px;
 }
 
 .body-form {
     margin-top: 30px;
 }
 
-.table > thead > tr > th{
-    text-align: center;
-    min-width: 200px;
-    padding: 10px 50px 10px 50px;
+thead, tbody { display: block; }
+
+tbody {
+    height: 650px;       /* Just for the demo          */
+    overflow-y: auto;    /* Trigger vertical scroll    */
+    overflow-x: hidden;  /* Hide the horizontal scroll */
 }
 
+.table > thead > tr > th{
+    text-align: center;
+    min-width: 300px;
+    max-width: 300px;
+    padding: 0px 10px 0px 10px;
+}
+
+td{
+    text-align: center;
+    min-width: 300px;
+    max-width: 300px;
+    padding: 0px 10px 0px 10px;
+}
 
 input[type=text]{
     margin-bottom: 10px;
