--- a/templates/index.html
+++ b/templates/index.html
@@ -201,15 +201,6 @@
                                 students at the University of Michigan.
                             </div>
                         </div>
-                        <div class="faq-item">
-                            <div class="question" data-qid="5">
-                                I didn't find my question here...
-                            </div>
-                            <div class="answer" data-qid="5">
-                                If you’ve got something else on your mind, fire it off to <a
-                                    href="mailto:hackathon@umich.edu">hackathon@umich.edu</a>!
-                            </div>
-                        </div>
                     </div>
 
                     <h4>Application</h4>
@@ -431,9 +422,13 @@
                                 There won't be showers available at the venue.
                             </div>
                         </div>
+                    </div>
+
+                    <h4>Help!</h4>
+                    <div class="faq-row">
                         <div class="faq-item">
                             <div class="question" data-qid="25">
-                                Help! I don’t want to hack, I want to ________!
+                                I don’t want to hack, I want to ________!
                             </div>
                             <div class="answer" data-qid="25">
                                 If you’re contemplating judging, volunteering, or mentoring, shoot us an email at <a
@@ -443,6 +438,16 @@
                                 interested in becoming a sponsor, check out the sponsorship section below.
                             </div>
                         </div>
+                        <div class="faq-item">
+                            <div class="question" data-qid="5">
+                                I didn't find my question here...
+                            </div>
+                            <div class="answer" data-qid="5">
+                                If you’ve got something else on your mind, fire it off to <a
+                                    href="mailto:hackathon@umich.edu">hackathon@umich.edu</a>!
+                            </div>
+                        </div>
+
                     </div>
 
                 </div>
